Version 4.0.1 (2013-xx-xx)
	Fixed bug where the position of the text color picker would be wrong if you switched to fullscreen.
	Fixed bug where the link plugin would ask to add the mailto: prefix multiple times.
	Fixed bug where list outdent operation could produce empty list elements on specific selections.
	Fixed so image size fields gets updated when selecting a new image in the image dialog.
	Fixed so it doesn't load any language pack if the language option is set to "en".
	Fixed so ctrl+shift+z works as an alternative redo shortcut to match a common Mac OS X shortcut.
	Fixed so it's not possible to drag/drop in images in Gecko by default when paste plugin is enabled.
	Fixed so format menu item texts gets translated using the specified language pack.
	Fixed so the image dialog title is the same as the insert/edit image button text.
Version 4.0 (2013-06-13)
	Added new insertdate_dateformat, insertdate_timeformat and insertdate_formats options to insertdatetime.
	Added new font_formats, fontsize_formats and block_formats options to configure fontselect, fontsizeselect and formatselect.
	Added new table_clone_elements option to table plugin. Enables you to specify what elements to clone when adding columns/rows.
	Added new auto detect logic for site and email urls in link plugin to match the logic found in 3.x.
	Added new getParams/setParams to WindowManager to make it easier to handle params to iframe based dialogs. Contributed by Ryan Demmer.
	Added new textcolor options that enables you to specify the colors you want to display. Contributed by Jennifer Arsenault.
	Added new external file support for link_list and image_list options. The file format is a simple JSON file.
	Added new "both" mode for the resize option. Enables resizing in both width and height.
	Added new paste_data_images option that allows you to enable/disable paste of data images.
	Added new fixed_toolbar_container option that allows you to add a fixed container for the inline toolbar.